--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wujiehao92/test",
+    "name": "hzwotu/wtcloud-test",
     "type": "project",
     "autoload": {
         "psr-4": {
